--- a/core_presentation.css
+++ b/core_presentation.css
@@ -73,8 +73,8 @@ h2{
 
 h3{
 font-family: 'Raleway', sans-serif;
-	color: var(--blue);
-	text-align: left;
+	color: var(--coreRed);
+	text-align: center;
 	font-size: 1.5em;
 		text-rendering: optimizelegibility !important;
 }
