--- a/rmd/core_presentation.css
+++ b/rmd/core_presentation.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background-color: var(--offwhite);
+	background-color: var(--whitesmoke);
 
 }
 
@@ -57,13 +57,13 @@ h1{
 	font-family: 'Montserrat', sans-serif;
 	color: var(--coreRed);
 	font-size: 1.9em;
-	text-align: center;
+	text-align: left;
 		text-rendering: optimizelegibility !important;
 
 }
 
 h2{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color: var(--blue);
 	font-size: 1.75em;
 	text-align: left;
@@ -72,7 +72,7 @@ h2{
 }
 
 h3{
-font-family: 'Raleway', sans-serif;
+font-family: 'Montserrat', sans-serif;
 	color: var(--blue);
 	text-align: left;
 	font-size: 1.5em;
@@ -80,7 +80,7 @@ font-family: 'Raleway', sans-serif;
 }
 
 h4{
-font-family: 'Raleway', sans-serif;
+font-family: 'Montserrat', sans-serif;
 	color: var(--blue);
 	text-align: left;
 	font-size: .55em;
