css fix and updated exec summary html

--- a/rmd/core_presentation.css
+++ b/rmd/core_presentation.css
@@ -91,7 +91,7 @@ font-family: 'Montserrat', sans-serif;
 ul,ol,dl,p,li{
 	color: var(--black);
 	font-family: 'Raleway', sans-serif;
-	font-size: 1.2rem;
+	font-size: 1.2em;
 	text-align: left;
 }
 
