addign date to css file for tracking issues

--- a/rmd/core_presentation.css
+++ b/rmd/core_presentation.css
@@ -1,4 +1,7 @@
-/* importing the following fonts: Nobile, lato. */
+/* importing the following fonts: Nobile, lato. 
+
+date: April 10, 2019
+*/
 
 @import url('https://fonts.googleapis.com/css?family=Nobile|Lato|Raleway|Montserrat');
 
